// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupplierEdit displays correctly for existing supplier 1`] = `
<Fragment>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      Edit Supplier
    </h2>
    <EditModelPage
      model={
        Object {
          "brand_names": Array [
            "brands 1",
            "brand 2",
            "brand 3",
          ],
          "id": 1,
          "link": "supplier.co.uk",
          "preferred_supplier": false,
          "supplier_name": "supplier name",
        }
      }
      modelFields={
        Array [
          Object {
            "error": "A value is required.",
            "fieldName": "supplier_name",
            "header": "Supplier",
            "length": 100,
            "required": true,
            "size": 20,
            "type": "text",
          },
          Object {
            "fieldName": "preferred_supplier",
            "header": "Preferred",
            "type": "checkbox",
          },
          Object {
            "fieldName": "link",
            "header": "URL",
            "length": 100,
            "size": 40,
            "type": "text",
            "validator": [Function],
          },
        ]
      }
      onChange={[Function]}
      persistedModel={
        Object {
          "brand_names": Array [
            "brands 1",
            "brand 2",
            "brand 3",
          ],
          "id": 1,
          "link": "supplier.co.uk",
          "preferred_supplier": false,
          "supplier_name": "supplier name",
        }
      }
      showReadOnlyFields={true}
    />
    <div
      key="supplierBrands1"
    >
      Brands: 
    </div>
    <div
      className="align_right"
    >
      <ModelEditIcons
        componentKey={1}
        model={
          Object {
            "brand_names": Array [
              "brands 1",
              "brand 2",
              "brand 3",
            ],
            "id": 1,
            "link": "supplier.co.uk",
            "preferred_supplier": false,
            "supplier_name": "supplier name",
          }
        }
        modelDelete={[Function]}
        modelReset={[Function]}
        modelSave={[Function]}
      />
    </div>
  </div>
</Fragment>
`;

exports[`SupplierEdit displays correctly for existing supplier as a modal dialogue 1`] = `
<Fragment>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  >
    <Icon
      as="i"
      circular={true}
      link={true}
      name="remove"
      onClick={[MockFunction]}
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      Edit Supplier
    </h2>
    <EditModelPage
      model={
        Object {
          "brand_names": Array [
            "brands 1",
            "brand 2",
            "brand 3",
          ],
          "id": 1,
          "link": "supplier.co.uk",
          "preferred_supplier": false,
          "supplier_name": "supplier name",
        }
      }
      modelFields={
        Array [
          Object {
            "error": "A value is required.",
            "fieldName": "supplier_name",
            "header": "Supplier",
            "length": 100,
            "required": true,
            "size": 20,
            "type": "text",
          },
          Object {
            "fieldName": "preferred_supplier",
            "header": "Preferred",
            "type": "checkbox",
          },
          Object {
            "fieldName": "link",
            "header": "URL",
            "length": 100,
            "size": 40,
            "type": "text",
            "validator": [Function],
          },
        ]
      }
      onChange={[Function]}
      persistedModel={
        Object {
          "brand_names": Array [
            "brands 1",
            "brand 2",
            "brand 3",
          ],
          "id": 1,
          "link": "supplier.co.uk",
          "preferred_supplier": false,
          "supplier_name": "supplier name",
        }
      }
      showReadOnlyFields={true}
    />
    <div
      key="supplierBrands1"
    >
      Brands: 
    </div>
    <div
      className="align_right"
    >
      <ModelEditIcons
        componentKey={1}
        model={
          Object {
            "brand_names": Array [
              "brands 1",
              "brand 2",
              "brand 3",
            ],
            "id": 1,
            "link": "supplier.co.uk",
            "preferred_supplier": false,
            "supplier_name": "supplier name",
          }
        }
        modelDelete={[Function]}
        modelReset={[Function]}
        modelSave={[Function]}
      />
    </div>
  </div>
</Fragment>
`;

exports[`SupplierEdit displays correctly for new supplier 1`] = `
<Fragment>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      Edit Supplier
    </h2>
    <EditModelPage
      model={Object {}}
      modelFields={
        Array [
          Object {
            "error": "A value is required.",
            "fieldName": "supplier_name",
            "header": "Supplier",
            "length": 100,
            "required": true,
            "size": 20,
            "type": "text",
          },
          Object {
            "fieldName": "preferred_supplier",
            "header": "Preferred",
            "type": "checkbox",
          },
          Object {
            "fieldName": "link",
            "header": "URL",
            "length": 100,
            "size": 40,
            "type": "text",
            "validator": [Function],
          },
        ]
      }
      onChange={[Function]}
      persistedModel={Object {}}
      showReadOnlyFields={true}
    />
    <div
      key="supplierBrands"
    >
      Brands: 
    </div>
    <div
      className="align_right"
    >
      <ModelEditIcons
        componentKey=""
        model={Object {}}
        modelDelete={[Function]}
        modelReset={[Function]}
        modelSave={[Function]}
      />
    </div>
  </div>
</Fragment>
`;
